--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "\"A sample app for cutshort nodejs skill analysis\"",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/AssaultKoder95/node-js-sample-app/issues"
   },
-  "homepage": "https://github.com/AssaultKoder95/node-js-sample-app#readme"
+  "homepage": "https://github.com/AssaultKoder95/node-js-sample-app#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  }
 }
